Fix alignment in information section
Information section was narrower than rest of the
page. It wasn't using the container to set the
width, so the alignment looked off compared to the
hero, quote, and CTA sections. Fixed by wrapping
the information section in the container. The style
rules changed to accommodate the container and
allowed me to get rid of the gap by using
flexbox space-between to evenly distribute the
icons.

--- a/style.css
+++ b/style.css
@@ -119,8 +119,7 @@ button {
 
 .cards {
   display: flex;
-  justify-content: center;
-  gap: 52px;
+  justify-content: space-between;
   margin-bottom: 100px;
 }
 
@@ -147,7 +146,7 @@ button {
   font-size: 36px;
   font-style: italic;
   font-weight: 100;
-  padding: 60px;
+  padding: 60px 0;
 }
 
 .quote cite {
